# poetry-devcontainer

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
